# PRG32-Construction-Kit

./: AGENTS.md  Dockerfile  LICENSE  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt
docs/: api.md  architecture.md  blockly.md  cartridge_build.md  cartridge_store_publish.md  docker.md  how_to.md  index.md  setup.md  sprite_editor.md
docs/tutorials/: 01_first_project.md  02_catch_game.md  03_sprite_editor.md  04_publish_to_store.md  05_teacher_lab.md
examples/: hello_blocks.json  lemon_catcher.json  sprite_player.json
prg32_construction_kit/: __init__.py  config.py  db.py  generator.py  packager.py  publisher.py  routes.py  sample_data.py
static/: manifest.webmanifest  service-worker.js
static/css/: app.css
static/js/: app.js  artifacts.js  blockly_blocks.js  dashboard.js  editor.js  publish.js  simulator.js  sprite_editor.js
templates/: artifacts.html  base.html  documentation.html  editor.html  index.html  publish.html  sprite_editor.html
tests/: conftest.py  test_api.py  test_generator.py
